[gd_scene load_steps=2 format=2]

[ext_resource path="res://Login.gd" type="Script" id=1]

[node name="Login" type="Node2D"]
script = ExtResource( 1 )

[node name="username" type="LineEdit" parent="."]
margin_left = 349.0
margin_top = 204.0
margin_right = 504.0
margin_bottom = 228.0
focus_next = NodePath("../password")
placeholder_text = "username"

[node name="password" type="LineEdit" parent="."]
margin_left = 352.0
margin_top = 254.0
margin_right = 506.0
margin_bottom = 278.0
focus_next = NodePath("../Button")
focus_previous = NodePath("../username")
secret = true
placeholder_text = "password"

[node name="confirm" type="LineEdit" parent="."]
visible = false
margin_left = 558.0
margin_top = 254.0
margin_right = 712.0
margin_bottom = 278.0
secret = true
placeholder_text = "password"

[node name="lbl_username" type="Label" parent="."]
margin_left = 308.0
margin_top = 183.0
margin_right = 374.0
margin_bottom = 197.0
text = "Username:"

[node name="lbl_confirm" type="Label" parent="."]
visible = false
margin_left = 527.0
margin_top = 234.0
margin_right = 591.0
margin_bottom = 248.0
text = "Confirm:"

[node name="lbl_password" type="Label" parent="."]
margin_left = 309.0
margin_top = 234.0
margin_right = 373.0
margin_bottom = 248.0
text = "Password:"

[node name="Button" type="Button" parent="."]
margin_left = 384.0
margin_top = 299.0
margin_right = 441.0
margin_bottom = 319.0
text = "Submit"

[node name="Register" type="Button" parent="."]
margin_left = 596.0
margin_top = 300.0
margin_right = 660.0
margin_bottom = 320.0
text = "Regsiter"

[node name="Exiting" type="Button" parent="."]
visible = false
margin_left = 596.0
margin_top = 300.0
margin_right = 660.0
margin_bottom = 320.0
text = "Existing User"

[node name="Message" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = 342.0
margin_top = 329.0
margin_right = 513.0
margin_bottom = 354.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Register" to="." method="_on_Register_pressed"]
[connection signal="pressed" from="Exiting" to="." method="_on_Exiting_pressed"]
